--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "gifty",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000/",
   "dependencies": {
     "@mui/material": "^5.0.2",
     "@testing-library/jest-dom": "^5.14.1",
