--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "^4.0.3"
   },
   "watch": {
     "build": {
@@ -29,7 +29,6 @@
     "eject": "react-scripts eject",
     "watch": "npm-watch"
   },
-  
   "eslintConfig": {
     "extends": [
       "react-app",
