--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "url": "https://github.com/GSG-G10/gifty/issues"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0-beta2",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0-beta2",
+    "@fortawesome/react-fontawesome": "^0.1.15",
+    "babel-plugin-macros": "^3.1.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
@@ -31,6 +35,7 @@
   },
   "homepage": "https://github.com/GSG-G10/gifty#readme",
   "devDependencies": {
+    "@babel/eslint-parser": "^7.15.7",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.2",
